# librasdk

./: .ccls  .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  GUIDLINE.md  LICENSE  README.md
examples/io/: CMakeLists.txt
examples/io/gpio-chardev/: CMakeLists.txt  edge-detection.c  get-line-info.c  pins-value.c
examples/io/serial/: CMakeLists.txt  serial.c
include/: libra_core.h
include/io/: gpio-chardev.h  gpio-sysfs.h  serial.h
include/io/rpi/: pins.h
include/libra/: core.h
include/libra/io/: gpio.h  serial.h
plugins/jm201/include/: jm201.h
source/: CMakeLists.txt  core.c
source/io/: CMakeLists.txt  gpio-chardev.c  gpio-sysfs.c  gpio.c  serial.c
tests/: CMakeLists.txt  io_test.c  main.c  serial_test.c
tests/io/: CMakeLists.txt  serial_test.c  serial_test.h
tests/io/gpio-chardev/: CMakeLists.txt  gpio-line-requst-and-info-get.c  gpio-lines-config-set.c  gpio-value-get-set.c  open-close-chipinfo.c
tests/io/gpio-sysfs/: CMakeLists.txt  pin-close-test.c  pin-direction-get-test.c  pin-direction-set-test.c  pin-edge-exists-test.c  pin-edge-get-test.c  pin-edge-set-test.c  pin-open-test.c  pin-value-get-evented-test.c  pin-value-get-test.c  pin-value-set-test.c  pin-value-toggle-test.c  utils.c
tests/io/serial/: CMakeLists.txt
